## File created by the gnome-build tools





www = @WWW@
wwwdisk = @WWWDISK@

wwwdir = ${wwwdisk}/kml/images

www_DATA = \
	925t.png \
	925hgt.png \
	925rh.png \
	925wind.png \
	850t.png \
	850hgt.png \
	850rh.png \
	850wind.png \
	700t.png \
	700hgt.png \
	700rh.png \
	700wind.png \
	500t.png \
	500hgt.png \
	500rh.png \
	500wind.png \
	300t.png \
	300hgt.png \
	300rh.png \
	300wind.png \
	pwat.png \
	cape.png \
	pcp.png \
	prob17.png \
	prob25.png \
	prob32.png \
	t.png \
	dp.png \
	sst.png \
	wind.png


925t.png: ../share/925t.scale Makefile ../scripts/makekey.sh
	../scripts/makekey.sh ../share/925t.scale "c" 925t.png

925hgt.png: ../share/925hgt.scale Makefile ../scripts/makekey.sh
	../scripts/makekey.sh ../share/925hgt.scale "m" 925hgt.png

925rh.png: ../share/925rh.scale Makefile ../scripts/makekey.sh
	../scripts/makekey.sh ../share/925rh.scale "%" 925rh.png

925wind.png: ../share/925wind.scale Makefile ../scripts/makekey.sh
	../scripts/makekey.sh ../share/925wind.scale "kts" 925wind.png

850t.png: ../share/850t.scale Makefile ../scripts/makekey.sh
	../scripts/makekey.sh ../share/850t.scale "c" 850t.png

850hgt.png: ../share/850hgt.scale Makefile ../scripts/makekey.sh
	../scripts/makekey.sh ../share/850hgt.scale "m" 850hgt.png

850rh.png: ../share/850rh.scale Makefile ../scripts/makekey.sh
	../scripts/makekey.sh ../share/850rh.scale "%" 850rh.png

850wind.png: ../share/850wind.scale Makefile ../scripts/makekey.sh
	../scripts/makekey.sh ../share/850wind.scale "kts" 850wind.png

700t.png: ../share/700t.scale Makefile ../scripts/makekey.sh
	../scripts/makekey.sh ../share/700t.scale "c" 700t.png

700hgt.png: ../share/700hgt.scale Makefile ../scripts/makekey.sh
	../scripts/makekey.sh ../share/700hgt.scale "m" 700hgt.png

700rh.png: ../share/700rh.scale Makefile ../scripts/makekey.sh
	../scripts/makekey.sh ../share/700rh.scale "%" 700rh.png

700wind.png: ../share/700wind.scale Makefile ../scripts/makekey.sh
	../scripts/makekey.sh ../share/700wind.scale "kts" 700wind.png

500t.png: ../share/500t.scale Makefile ../scripts/makekey.sh
	../scripts/makekey.sh ../share/500t.scale "c" 500t.png

500hgt.png: ../share/500hgt.scale Makefile ../scripts/makekey.sh
	../scripts/makekey.sh ../share/500hgt.scale "m" 500hgt.png

500rh.png: ../share/500rh.scale Makefile ../scripts/makekey.sh
	../scripts/makekey.sh ../share/500rh.scale "%" 500rh.png

500wind.png: ../share/500wind.scale Makefile ../scripts/makekey.sh
	../scripts/makekey.sh ../share/500wind.scale "kts" 500wind.png

300t.png: ../share/300t.scale Makefile ../scripts/makekey.sh
	../scripts/makekey.sh ../share/300t.scale "c" 300t.png

300hgt.png: ../share/300hgt.scale Makefile ../scripts/makekey.sh
	../scripts/makekey.sh ../share/300hgt.scale "m" 300hgt.png

300rh.png: ../share/300rh.scale Makefile ../scripts/makekey.sh
	../scripts/makekey.sh ../share/300rh.scale "%" 300rh.png

300wind.png: ../share/300wind.scale Makefile ../scripts/makekey.sh
	../scripts/makekey.sh ../share/300wind.scale "kts" 300wind.png

cape.png: ../share/cape.scale Makefile ../scripts/makekey.sh
	../scripts/makekey.sh ../share/cape.scale "J/kg" cape.png

pwat.png: ../share/pwat.scale Makefile ../scripts/makekey.sh
	../scripts/makekey.sh ../share/pwat.scale "kg/m^2" pwat.png

pcp.png: ../share/pcp.scale Makefile ../scripts/makekey.sh
	../scripts/makekey.sh ../share/pcp.scale "kg/m^2" pcp.png

prob17.png: ../share/prob.scale Makefile ../scripts/makekey.sh
	../scripts/makekey.sh ../share/prob.scale "%" prob17.png

prob25.png: ../share/prob.scale Makefile ../scripts/makekey.sh
	../scripts/makekey.sh ../share/prob.scale "%" prob25.png

prob32.png: ../share/prob.scale Makefile ../scripts/makekey.sh
	../scripts/makekey.sh ../share/prob.scale "%" prob32.png

t.png: ../share/t.scale Makefile ../scripts/makekey.sh
	../scripts/makekey.sh ../share/t.scale "%" t.png

dp.png: ../share/dp.scale Makefile ../scripts/makekey.sh
	../scripts/makekey.sh ../share/dp.scale "%" dp.png

sst.png: ../share/sst.scale Makefile ../scripts/makekey.sh
	../scripts/makekey.sh ../share/sst.scale "c" sst.png

wind.png: ../share/wind.scale Makefile ../scripts/makekey.sh
	../scripts/makekey.sh ../share/wind.scale "%" wind.png

