
www = @WWW@
wwwdisk = @WWWDISK@

dist_pkgdata_DATA = \
	cape.scale \
	700t.scale \
	925t.scale \
	300t.scale \
	500t.scale \
	850t.scale \
	925rh.scale \
	850rh.scale \
	700rh.scale \
	500rh.scale \
	300rh.scale \
	925hgt.scale \
	850hgt.scale \
	700hgt.scale \
	500hgt.scale \
	300hgt.scale \
	300wind.scale \
	500wind.scale \
	700wind.scale \
	850wind.scale \
	925wind.scale \
	pwat.scale \
	pmsl.scale \
	pcp.scale \
	rain.scale \
	snow.scale \
	frez.scale \
	pellet.scale \
	prob.scale \
	t.scale \
	dp.scale \
	sst.scale \
	wind.scale \
	hghtww.scale \
	perdww.scale \
	htsgw.scale \
	pop.scale \
	popf.scale \
	popz.scale \
	tstm.scale \
	forecaster.config.sh \
	gfs.config.sh \
	nam_conus.config.sh \
	ruc2.config.sh \
	nam_ak.config.sh \
	nam_east.config.sh \
	nam_hi.config.sh \
	nam_pr.config.sh \
	nam_west.config.sh \
	windwave.config.sh \
	nogaps.config.sh \
	sst.config.sh
	

